# stopliga

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml  run_stopliga.py
.github/workflows/: ci.yml  publish-docker.yml  publish-preview-docker.yml
docker/: entrypoint.py
docs/: router-real-device-test-matrix.md  unifi-network-10.3-validation.md
src/stopliga/: __init__.py  cli.py  config.py  errors.py  feed.py  logging_utils.py  models.py  notifier.py  opnsense.py  service.py  state.py  unifi.py  utils.py
src/stopliga/routers/: __init__.py  base.py  factory.py  fritzbox.py  keenetic.py  mikrotik.py  omada.py  opnsense.py  unifi.py
src/webui/: server.py
src/webui/templates/: index.html
tests/: __init__.py  test_config.py  test_entrypoint.py  test_feed.py  test_fritzbox.py  test_integration.py  test_keenetic.py  test_mikrotik.py  test_omada.py  test_router_factory.py  test_state.py  test_utils.py  test_webui.py
