[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stopliga"
version = "0.1.17"
description = "Synchronize a managed router route or rule with live block status and a public IP feed."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Jonatan"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.20,<1.21",
  "pip-audit>=2.10,<2.11",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<0.16",
]

[project.scripts]
stopliga = "stopliga.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "-q",
  "--cov=src/stopliga",
  "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["src/stopliga"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
pretty = true
